--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,6 +17,14 @@
         android:layout_gravity="center"
         tools:context=".MapsActivity">
 
+        <Button
+            android:id="@+id/ub"
+            android:layout_width="68dp"
+            android:layout_height="58dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/ic_marcador_foreground"
+            android:gravity="right|top" />
+
     </fragment>
 
     <Button
